Trying a mixture of inline options with MathJax as well as per-page conf

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_username:  S0AndS0
 
 # Build settings
 markdown: kramdown
-mathjax: true
+# mathjax: true
 theme: minima
 plugins:
   - jekyll-feed
